feat(web/db): Drift on web via sql.js + IndexedDB; notes on Drift; commits cached offline - Use Drift WebDatabase with IndexedDB and volatile fallback - Add Notes table + DAO + repository; wire providers - Cache GitHub commits to DB and read offline - Add unit tests for commits repo (skipped on Windows if sqlite3 missing) - Remove Hive runtime dependency for notes on web - Connect sql-wasm.js/wasm in web/index.html

--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <!--
@@ -31,6 +31,7 @@
 
   <title>devhub_gpt</title>
   <link rel="manifest" href="manifest.json">
+  <script src="sql-wasm.js" defer></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
