--- a/web/index.html
+++ b/web/index.html
@@ -5,24 +5,27 @@
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="DevHub — контроль GitHub активності, нотатки та AI-помічник в одному робочому просторі.">
-  <meta name="theme-color" content="#111827">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-devhub-bootstrap' 'unsafe-eval' 'wasm-unsafe-eval' https://www.gstatic.com https://www.googletagmanager.com https://apis.google.com 'sha256-b7VWE6/DP83CoRaV7asP+y8E+mQO2FS3L3n8hAdUVSo=' 'sha256-5Dqn0gunJTiwoaB7vVKbB7+t6w1jBB7QykPteGaX/8E='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://api.github.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://www.googleapis.com https://apis.google.com https://firebasestorage.googleapis.com https://github.com https://*.firebaseio.com https://*.firebaseapp.com https://www.gstatic.com https://fonts.gstatic.com; frame-ancestors 'none'; frame-src 'self' https://apis.google.com https://*.google.com https://github.com https://*.github.com https://*.firebaseapp.com; child-src 'self' https://apis.google.com https://*.google.com https://github.com https://*.github.com https://*.firebaseapp.com; worker-src 'self'; base-uri 'self'; form-action 'self'; object-src 'none'; upgrade-insecure-requests">
-
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="description" content="DevHub — особистий хаб для перегляду GitHub‑активності, нотаток та AI-помічника.">
+  <meta name="application-name" content="DevHub">
   <meta name="apple-mobile-web-app-title" content="DevHub">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="theme-color" content="#0b1120">
+  <meta name="color-scheme" content="light dark">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; frame-ancestors 'none'; form-action 'self'; upgrade-insecure-requests; script-src 'self' 'nonce-flutter-bootstrap' https://www.gstatic.com https://www.googleapis.com https://apis.google.com; connect-src 'self' https://api.github.com https://github.com https://avatars.githubusercontent.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://www.googleapis.com https://www.gstatic.com; img-src 'self' data: blob: https://avatars.githubusercontent.com https://github.com; style-src 'self' 'unsafe-inline'; font-src 'self' data: https://fonts.gstatic.com; worker-src 'self' blob:; object-src 'none';">
 
   <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <link rel="manifest" href="manifest.json">
 
   <title>DevHub</title>
 
-  <script src="sql-wasm.js" defer nonce="devhub-bootstrap"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.13.2/firebase-app-compat.js" defer nonce="flutter-bootstrap" crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.13.2/firebase-auth-compat.js" defer nonce="flutter-bootstrap" crossorigin="anonymous"></script>
+  <script src="sql-wasm.js" defer nonce="flutter-bootstrap"></script>
+  <script src="flutter.js" defer nonce="flutter-bootstrap"></script>
+  <script src="flutter_bootstrap.js" defer nonce="flutter-bootstrap"></script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async nonce="devhub-bootstrap"></script>
+  <noscript>Для роботи DevHub потрібен JavaScript.</noscript>
 </body>
 </html>
