--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="DevHub вЂ” РєРѕРЅС‚СЂРѕР»СЊ GitHub Р°РєС‚РёРІРЅРѕСЃС‚С–, РЅРѕС‚Р°С‚РєРё С‚Р° AI-РїРѕРјС–С‡РЅРёРє РІ РѕРґРЅРѕРјСѓ СЂРѕР±РѕС‡РѕРјСѓ РїСЂРѕСЃС‚РѕСЂС–.">
   <meta name="theme-color" content="#111827">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://github.com https://*.github.com; script-src 'self' 'nonce-devhub-bootstrap' 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval' https://www.gstatic.com https://www.googletagmanager.com https://apis.google.com 'sha256-b7VWE6/DP83CoRaV7asP+y8E+mQO2FS3L3n8hAdUVSo=' 'sha256-5Dqn0gunJTiwoaB7vVKbB7+t6w1jBB7QykPteGaX/8E='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://api.github.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://www.googleapis.com https://apis.google.com https://firebasestorage.googleapis.com https://github.com https://*.firebaseio.com https://*.firebaseapp.com https://www.gstatic.com https://fonts.gstatic.com; frame-ancestors 'none'; frame-src 'self' https://apis.google.com https://*.google.com https://github.com https://*.github.com https://*.firebaseapp.com; child-src 'self' https://apis.google.com https://*.google.com https://github.com https://*.github.com https://*.firebaseapp.com; worker-src 'self'; base-uri 'self'; form-action 'self'; object-src 'none'; upgrade-insecure-requests">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://github.com https://*.github.com; script-src 'self' 'nonce-devhub-bootstrap' 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval' https://www.gstatic.com https://www.googletagmanager.com https://apis.google.com 'sha256-b7VWE6/DP83CoRaV7asP+y8E+mQO2FS3L3n8hAdUVSo=' 'sha256-5Dqn0gunJTiwoaB7vVKbB7+t6w1jBB7QykPteGaX/8E='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://api.github.com https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://www.googleapis.com https://apis.google.com https://firebasestorage.googleapis.com https://fcmregistrations.googleapis.com https://firebaseinstallations.googleapis.com https://fcm.googleapis.com https://github.com https://*.firebaseio.com https://*.firebaseapp.com https://www.gstatic.com https://fonts.gstatic.com; frame-ancestors 'none'; frame-src 'self' https://apis.google.com https://*.google.com https://github.com https://*.github.com https://*.firebaseapp.com; child-src 'self' https://apis.google.com https://*.google.com https://github.com https://*.github.com https://*.firebaseapp.com; worker-src 'self'; base-uri 'self'; form-action 'self'; object-src 'none'; upgrade-insecure-requests">
 
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -21,7 +21,7 @@
   <title>DevHub</title>
 
   <script nonce="devhub-bootstrap">
-    window.flutterfire_ignore_scripts = ["app", "auth"];
+    window.flutterfire_ignore_scripts = ["app", "auth", "messaging"];
     window.flutterfire_web_sdk_version = "12.2.1";
   </script>
   <script type="module" nonce="devhub-bootstrap">
@@ -29,11 +29,22 @@
     window.firebase_core = core;
     const auth = await import("https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js");
     window.firebase_auth = auth;
+    const messaging = await import("https://www.gstatic.com/firebasejs/12.2.1/firebase-messaging.js");
+    window.firebase_messaging = messaging;
   </script>
   <script src="sql-wasm.js" defer nonce="devhub-bootstrap"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async nonce="devhub-bootstrap"></script>
+  <script nonce="devhub-bootstrap">
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker
+          .register('firebase-messaging-sw.js')
+          .catch((err) => console.warn('FCM SW registration failed', err));
+      });
+    }
+  </script>
 </body>
 </html>
 
